__Bug Fixes__
- Hierachy for the Engineer was fixed.  Nano point was a child of the base, and not the body.  Little effect in-game, but an improper setup none-the-less.


__Balance__
- Decreased Rocket Battleship's missile damage from 650 to 150 for every armor class.


__New Units__


__Miscellaneous__
- Removed redundancy in most building descriptions in the tooltip.
- Added more sounds.


ver.08.1 -> ver.08.2
__Bug Fixes__
- Fixed Advanced Bomber's secondary machine gun.  Now works!


__Balance__
- Decreased Shield Generator's shield power from 2000 to 1000, and its power regeneration from 2 to 0.5.
- Increased Heavy Assault Mech's HP from 11000 to 50000.
- Increased Battle Flagship's Disintegrator weapon range from 350 to 500.


__New Units__
- Added new unit:  Support Factory.  Builds auxiliary units.  Built by the Engineer.
- Added new unit:  Hover Transport.  Tech level 1 hover transport built at the Support Factory.


__Miscellaneous__
- Finally adding sounds!
- Finally adding CEG effects!
- Finally adding explosions!
- Fixed Gatling Turret's build pic.


ver.08 -> ver.08.1
__Bug Fixes__
- Removed Flagship, Battle Flagship, Metal Supply Cruiser, Energy Supply Cruiser, Transport Cruiser, and Battlecruiser from qualifying as "builders."  (Will no longer be selected with Idle Builder hotkey.)
- Removed extraneous On/Off switch for Advanced Land Turret.
- Gave Artillery Ship the High/Low Trajectory ability.
- Changed Advanced Anti-Mech turret's name from "Gun Emplacement" to "Missile Emplacement."
- Gave EMP Cannon a weapon with a range mirroring the range of its Turret Mode, to help gauge attack range before morphing.
- EMP Cannon Turret can now actually penetrate shields!


__Balance__
- Increased Engineer's metal and energy make from 0.15 to 0.25.
- Reduced Advanced Engineer's metal and energy make from 0.3 to 0.25.
- Increased Naval Engineer's metal and energy make from 0.15 to 0.25.