@@ -2,7 +2,7 @@ unitDef = {
 
   unitname                      = [[badvpowerplant]],
   name                          = [[High Yield Power Plant]],
-  description                   = [[High-altitude wind-generators that are easy to install and provide varying levels of power.]],
+  description                   = [[Easy to install power station capable of giving a sizeable boost to energy.  Adds +50 energy.]],
   amphibious                    = false,
   acceleration                  = 0,
   activateWhenBuilt             = true,
@@ -18,18 +18,13 @@ unitDef = {
   corpse                        = [[DEAD]],
      reclaimable                   = false,
 
-  collisionVolumeOffsets        = [[0 0 0]],
-  collisionVolumeScales         = [[80 250 48]],
-  collisionVolumeTest           = 1,
-  collisionVolumeType           = [[box]],
-
   damageModifier                = 0.25,
-  energyUse                     = 0,
+  energyUse                     = -50,
   explodeAs                     = [[MEDIUM_BUILDING]],
-  footprintX                    = 5,
-  footprintZ                    = 3,
+  footprintX                    = 4,
+  footprintZ                    = 4,
   idleAutoHeal                  = 0,
-  mass                          = 100,
+  mass                          = 400,
   maxDamage                     = 2750,
   maxSlope                      = 18,
   maxVelocity                   = 0,
@@ -37,7 +32,7 @@ unitDef = {
   maxWaterDepth                 = 0,
   minCloakDistance              = 150,
   noAutoFire                    = false,
-  objectName                    = [[badvpowerstation.s3o]],
+  objectName                    = [[badvpowerplant.s3o]],
 
   onoffable                     = true,
   seismicSignature              = 4,
@@ -58,9 +53,8 @@ unitDef = {
 
   TEDClass                      = [[ENERGY]],
   turnRate                      = 0,
-  windGenerator                 = 60,
   workerTime                    = 0,
-  yardMap                       = [[ooooo ooooo ooooo]],
+  yardMap                       = [[oooo oooo oooo oooo]],
   script                        = [[badvpowerplant.lua]],
 
 
@@ -97,12 +91,12 @@ unitDef = {
       damage           = 1375,
       energy           = 0,
       featurereclamate = [[SMUDGE01]],
-      footprintX       = 5,
-      footprintZ       = 3,
+      footprintX       = 4,
+      footprintZ       = 4,
       height           = [[4]],
       hitdensity       = [[100]],
       metal            = 1375,
-      object           = [[b5x3heap.s3o]],
+      object           = [[b4x4heap.s3o]],
       reclaimable      = true,
       reclaimTime      = 275,
       seqnamereclamate = [[TREE1RECLAMATE]],
