@@ -13,6 +13,7 @@ __New Units__
 __Miscellaneous__
 - Removed redundancy in most building descriptions in the tooltip.
 - Added more sounds.
+- Redid Advanced Power Plant.  Is no longer a wind generator, instead just a simple power plant.
 
 
 ver.08.1 -> ver.08.2
